[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/poison_spawner.gd" type="Script" id=1]

[node name="poison_spawner" type="Spatial"]
script = ExtResource( 1 )

[node name="poison_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="self_spawn_timer" type="Timer" parent="."]
wait_time = 45.0
autostart = true
[connection signal="timeout" from="poison_timer" to="." method="_on_poison_timer_timeout"]
[connection signal="timeout" from="self_spawn_timer" to="." method="_on_self_spawn_timer_timeout"]
